K8s/auth-service-deployment.yaml
# HorizontalPodAutoscaler
---
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  namespace: sidita-v3
spec:
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
  selector:
    name: auth
# Deployment
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-deployment
  namespace: sidita-v3
spec:
  replicas: 2
  selector:
    matchLabels:
      name: auth
  template:
    metadata:
      labels:
        name: auth
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
      - env:
        - name: APP_DOMAIN
          value: api.sidita.id
        - name: BASEURL
          value: https://api.sidita.id
        - name: COOKIE_DOMAIN
          value: .sidita.id
        - name: COOKIE_NAME
          value: __Host-siditav3
        - name: COOKIE_SECURE
          value: "true"
        - name: DSN
          value: host=10.66.66.5 port=5432 user=postgres password=51DiT4_POst6R3sQL dbname=sidita-v3 sslmode=disable timezone=UTC+7 connect_timeout=5
        - name: IAM_AUTH_URL
          value: https://iam.pln.co.id/svc-core/oauth2/auth
        - name: IAM_CLIENT_ID
          value: SUlj#ot8EHz8nsGpD3mT
        - name: IAM_CLIENT_SECRET
          value: TB79KwhBVXw4ZYaXhbWG8YjRkyM5rf
        - name: IAM_HR_INFO_URL
          value: https://iam.pln.co.id/svc-core/account/hrinfo
        - name: IAM_ISSUER
          value: https://iam.pln.co.id/svc-core/oauth2
        - name: IAM_LOGOUT_URL
          value: https://iam.pln.co.id/svc-core/oauth2/session/end
        - name: IAM_TOKEN_URL
          value: https://iam.pln.co.id/svc-core/oauth2/token
        - name: IAM_POST_LOGOUT_REDIRECT_URI
          value: https://app.sidita.id/login?l=true
        - name: JWT_AUDIENCE
          value: api.sidita.id
        - name: JWT_ISSUER
          value: PUSMANPRO PLN
        - name: JWT_SECRET
          value: 7E0eH-Jck1Dc2pKRdrZwEUTWbYKf2-S4rhKil_dalHF-ht2lCnrDHufZUng037tY7PNJNf_UEVd8Qqb1GgHS-lzEPK-N0pTWHMZj5U36ODeC7n13vLU0IWLh46xnkc1WWghWJz1oh4j87mNzmQjDlaQodoICaoOxglY1xbr9moE
        - name: LOGGER_SERVICE_HOST
          value: logger-service
        - name: LOGGER_SERVICE_PORT
          value: "5001"
        - name: MONGO_COLLECTION_NAME
          value: logs
        - name: MONGO_DB
          value: sidita
        - name: MONGO_DB_NAME
          value: sidita
        - name: MONGO_DSN
          value: mongodb://adminUser:ZXgwB6pHmh0hVPLKAjZECSCBd9yucdTILxohUQ7QoGHrt7DwDp@10.66.66.5:27017/sidita?directConnection=true
        - name: MONGO_PASSWORD
          value: ZXgwB6pHmh0hVPLKAjZECSCBd9yucdTILxohUQ7QoGHrt7DwDp
        - name: MONGO_USER
          value: adminUser
        - name: REDIS_DSN
          value: redis://:vDBAAwyqiEz4%2F9OupVhu59hrRk3VT4SqsrMDVKqp8E3NTv3vUJCSX4lIs8t9tcGT7rV666OFPEFZGKFw@10.66.66.5:6379/0
        - name: SEAWEEDFS_FILER
          value: http://10.66.66.5:8888
        - name: SEAWEEDFS_FILER_READ
          value: https://file.sidita.id
        - name: FE_BASE_URL
          value: https://app.sidita.id
        image: dptpusmanpro/auth-service:0.0.79
        imagePullPolicy: Always
        name: auth
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: "128m" # Minimum amount of CPU required
            memory: "128Mi" # Optional, but recommended to specify
          limits:
            cpu: "1024m" # Maximum amount of CPU allowed
            memory: "512Mi" # Optional, but recommended to specify
