K8s/logger-service-deployment.yaml
# HorizontalPodAutoscaler
---
apiVersion: v1
kind: Service
metadata:
  namespace: sidita-v3
  name: logger-service
spec:
  selector:
    name: logger
  ports:
    - protocol: TCP
      port: 5001
      targetPort: 5001
# Deployment
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: sidita-v3
  name: logger-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      name: logger
  template:
    metadata:
      labels:
        name: logger
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
      - env:
        - name: GRPC_PORT
          value: "5001"
        - name: MONGO_DB
          value: sidita
        - name: MONGO_DSN
          value: mongodb://adminUser:ZXgwB6pHmh0hVPLKAjZECSCBd9yucdTILxohUQ7QoGHrt7DwDp@10.66.66.5:27017/sidita?directConnection=true
        - name: MONGO_PASSWORD
          value: ZXgwB6pHmh0hVPLKAjZECSCBd9yucdTILxohUQ7QoGHrt7DwDp
        - name: MONGO_USER
          value: adminUser
        image: dptpusmanpro/logger-service:0.0.20
        imagePullPolicy: Always
        name: logger
        ports:
        - containerPort: 8082
    resources:
        requests:
          cpu: "128m" # Minimum amount of CPU required
          memory: "128Mi" # Optional, but recommended to specify
        limits:
          cpu: "1024m" # Maximum amount of CPU allowed
          memory: "512Mi" # Optional, but recommended to specify
