K8s/nextjs-sidita-deployment.yaml
# HorizontalPodAutoscaler
---
apiVersion: v1
kind: Service
metadata:
  name: nextjs-sidita-service
  namespace: sidita-v3
spec:
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 3000
  selector:
    app: nextjs-sidita

# Deployment
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextjs-sidita-deployment
  namespace: sidita-v3
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nextjs-sidita
  template:
    metadata:
      labels:
        app: nextjs-sidita
    spec:
      containers:
      - name: nextjs-sidita
        image: dptpusmanpro/uat-nextjs-sidita:1104
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
        volumeMounts:
        - mountPath: /tmp/node_modules/sharp
          name: sharp-cache
        resources:
          requests:
            cpu: "128m"
            memory: "128Mi"
          limits:
            cpu: "512m"
            memory: "512Mi"
      imagePullSecrets:
      - name: regcred
      volumes:
      - name: sharp-cache
        emptyDir: {}  # Example volume type; change if needed
