K8s/project-service-deployment.yaml
# HorizontalPodAutoscaler
---
apiVersion: v1
kind: Service
metadata:
  namespace: sidita-v3
  name: project-service
spec:
  selector:
    name: project
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
# Deployment
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: sidita-v3
  name: project-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      name: project
  template:
    metadata:
      labels:
        name: project
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
        - env:
          - name: APP_DOMAIN
            value: api.sidita.id
          - name: COOKIE_DOMAIN
            value: .sidita.id
          - name: COOKIE_NAME
            value: __Host-siditav3
          - name: COOKIE_SECURE
            value: "true"
          - name: DSN
            value: host=10.66.66.5 port=5432 user=postgres password=51DiT4_POst6R3sQL dbname=sidita-v3 sslmode=disable timezone=UTC+7 connect_timeout=5
          - name: JWT_AUDIENCE
            value: api.sidita.id
          - name: JWT_ISSUER
            value: PUSMANPRO PLN
          - name: JWT_SECRET
            value: 7E0eH-Jck1Dc2pKRdrZwEUTWbYKf2-S4rhKil_dalHF-ht2lCnrDHufZUng037tY7PNJNf_UEVd8Qqb1GgHS-lzEPK-N0pTWHMZj5U36ODeC7n13vLU0IWLh46xnkc1WWghWJz1oh4j87mNzmQjDlaQodoICaoOxglY1xbr9moE
          - name: LOGGER_SERVICE_HOST
            value: logger-service
          - name: LOGGER_SERVICE_PORT
            value: "5001"
          - name: REDIS_DSN
            value: redis://:vDBAAwyqiEz4%2F9OupVhu59hrRk3VT4SqsrMDVKqp8E3NTv3vUJCSX4lIs8t9tcGT7rV666OFPEFZGKFw@10.66.66.5:6379/0
          - name: SEAWEEDFS_FILER
            value: http://10.66.66.5:8888
          - name: SEAWEEDFS_FILER_READ
            value: https://file.sidita.id
          image: dptpusmanpro/project-service:0.0.111
          name: project
          imagePullPolicy: Always
          ports:
          - containerPort: 8081
          resources:
            requests:
              cpu: "128m" # Minimum amount of CPU required
              memory: "128Mi" # Optional, but recommended to specify
            limits:
              cpu: "1024m" # Maximum amount of CPU allowed
              memory: "512Mi" # Optional, but recommended to specify
