K8s/project-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose -f /opt/sidita-project/swarm.yml convert -v
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: project-service
  name: project-service
spec:
  ports:
    - name: "8081"
      port: 8081
      targetPort: 8081
  selector:
    io.kompose.service: project-service
